Fixed bug #31971 (ftp_login fails on some SSL servers). Patch by: frantisek at augusztin dot com